# factstr-tool-rental-example

./: .gitignore  AGENTS.md  README.md
docs/: DOMAIN.md
docs/specs/: check-out-tool.md  (+3 more)
rust/: .env.example  Cargo.toml  README.md  factstr-tool-rental.postman_collection.json
rust/src/: config.rs  health.rs  lib.rs  logging.rs  main.rs  projection_database.rs  routes.rs  store.rs
rust/src/events/: mod.rs  tool_checked_out.rs  tool_registered.rs  tool_returned.rs
rust/src/features/: mod.rs
rust/src/features/check_out_tool/: append_consequences.rs  build_context.rs  generate_consequences.rs  mod.rs  process_request.rs
rust/src/features/get_inventory/: apply_fact.rs  inventory_change_notifier.rs  inventory_item.rs  inventory_projection.rs  inventory_status.rs  mod.rs  projection_schema.rs  projection_store.rs  query_inventory.rs  start_projection.rs
rust/src/features/register_tool/: append_consequences.rs  build_context.rs  generate_consequences.rs  load_context.rs  mod.rs  process_request.rs
rust/src/features/return_tool/: append_consequences.rs  build_context.rs  generate_consequences.rs  load_context.rs  mod.rs  process_request.rs
rust/src/http/: check_out_tool.rs  get_inventory.rs  get_inventory_events.rs  mod.rs  register_tool.rs  return_tool.rs  ui.rs
rust/static/: app.js  index.html  styles.css
rust/tests/: check_out_tool.rs  check_out_tool_http.rs  events.rs  get_inventory.rs  get_inventory_http.rs  health.rs  register_tool.rs  register_tool_http.rs  return_tool.rs  return_tool_http.rs  store.rs  ui_http.rs
typescript-node/: README.md
(+4 files in other folders)
