[package]
name = "factstr-tool-rental-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
factstr = "0.4.1"
factstr-postgres = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "time"] }
time = { version = "0.3.47", features = ["serde", "serde-well-known", "formatting", "parsing"] }
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
factstr-memory = "0.4.1"
tower = "0.5.3"
